# Dataset-Yahoo

./: .env  Dockerfile  READ.ME.txt  README.md  docker-compose.yaml  mkdocs.yml  modelo_dis_v1.keras  pyproject.toml
Dataset/: lstm_dataset.py
alembic/: env.py
alembic/versions/: dfe3bea68517_init_db.py
docs/: endpoints.md  index.md
site/: 404.html  index.html
site/endpoints/: index.html
site/search/: search_index.json
yahoo-predict/: app.py
yahoo-predict/controllers/: predict_controller.py
yahoo-predict/routes/: predict.py
yahoo_predict/: app.py  config.py  database.py
yahoo_predict/controllers/: predict_controller.py  stock_controller.py
yahoo_predict/models/: predict.py  stock.py
yahoo_predict/routes/: predict.py  stock.py
