[tool.poetry]
name = "dataset-yahoo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.5"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic-settings = "^2.6.1"
pydantic = "^2.9.2"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
yfinance = "^0.2.50"
psycopg2-binary = "^2.9.10"
tensorflow = "^2.17.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.47"
markdown-toc = "^1.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
